# RemoteTool

./: .gitignore  CMakeLists.txt  CMakePresets.json  OPERATION_MANUAL.md  README.md  STATUS.md
apps/agent_windows/: main.cpp
apps/agent_windows/gui/: agent_window.cpp  agent_window.h
apps/agent_windows/resources/: agent.manifest  agent.rc  resource.h
apps/remote_tool/: main.cpp
apps/remote_tool/gui/: dialogs.cpp  dialogs.h  event_queue.h  main_window.cpp  main_window.h
apps/remote_tool/resources/: remote_tool.manifest  remote_tool.rc  resource.h
apps/shared/: theme.cpp  theme.h
build-rel.old/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja  empty_manifest.cpp
cmake/: Dependencies.cmake
docs/: AI_HANDOFF_PROMPT.md  CODING_STANDARDS.md  CONFIG_SPEC.md  DEVELOPMENT_SPEC.md  DEV_WORKFLOW.md  ENVIRONMENT.md  IMPLEMENTATION_PLAN.md  INSTALL.md  PROTOCOL_SPEC.md  README.md  TEST_PLAN.md
include/rmt/: test.h
include/rmt/common/: error_code.h  log.h  scope_guard.h
include/rmt/config/: atomic_write.h  config_loader.h  config_schema.h  strict_json.h
include/rmt/platform/: dpapi_secret_store.h
include/rmt/protocol/: frame.h  messages.h
include/rmt/security/: secret_store.h  target_whitelist.h  tls_context.h
include/rmt/session/: session_id.h
include/rmt/tunnel/: acceptor.h  agent_connection.h  agent_session.h  agent_session_manager.h  connection.h  device_manager.h  mapping_listener.h  session_manager.h
src/common/: log.cpp
src/config/: atomic_write.cpp  config_loader.cpp  config_schema.cpp  strict_json.cpp
src/platform/: dpapi_secret_store.cpp
src/protocol/: frame.cpp  messages.cpp
src/security/: dev_file_secret_store.cpp  target_whitelist.cpp  tls_context_stub.cpp  tls_mbedtls.cpp
src/tunnel/: acceptor.cpp  agent_connection.cpp  agent_session.cpp  agent_session_manager.cpp  connection.cpp  device_manager.cpp  mapping_listener.cpp  session_manager.cpp
tests/integration/: hello_heartbeat_test.cpp  multi_session_test.cpp
tests/unit/: agent_connection_test.cpp  agent_session_test.cpp  atomic_write_test.cpp  config_loader_test.cpp  config_schema_test.cpp  connection_test.cpp  device_manager_test.cpp  frame_test.cpp  log_test.cpp  messages_test.cpp  scope_guard_test.cpp  secret_store_test.cpp  session_manager_test.cpp  strict_json_test.cpp  target_whitelist_test.cpp
tools/: build-release.sh  devcheck.sh  gen-icon.py  msvc-check.sh  msvc-cmake.bat  msvc-cmake.sh  smoke_e2e.py
